add missing options to entrypoint